@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add addOracleHash for oracles with reduced storage requirements
 0.16.4, released 2018-04-04
     #185, add addOracleCache which doesn't always rerun
     #576, remove incorrect Cabal description
